# THEFENCEBOT

./: .gitignore  README.md
Math/: 6dog_math_mode.ipynb  ReadMe.md  link.py  urdf2dhparam.py
NeuralNetwork/: LNN_FIX_NOTES.md  Pinn_Contact.py  baseline_nn.pth  lagrangian_nn.pth  makefile  predict_contact.py  pytorchInit.ipynb  rb_spring_collision.ipynb  rb_spring_collision_copy.ipynb  rigidbody_animation.ipynb  train_lnn_fixed.py  train_pinn.py
Resources/: DH_PARAM_FENCE.drawio  asem - 副本 - 副本.SLDASM.csv  asem - 副本 - 副本.SLDASM.urdf
Scripts/: calibrate_workspace.py  (+3 more)
src/vr_robot_sim/: CMakeLists.txt
src/vr_robot_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/vr_robot_sim/install/vr_robot_sim/lib/vr_robot_sim/: robot_controller  vr_udp_publisher
src/vr_robot_sim/install/vr_robot_sim/share/ament_index/resource_index/package_run_dependencies/: vr_robot_sim
src/vr_robot_sim/install/vr_robot_sim/share/ament_index/resource_index/parent_prefix_path/: vr_robot_sim
src/vr_robot_sim/install/vr_robot_sim/share/vr_robot_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
src/vr_robot_sim/install/vr_robot_sim/share/vr_robot_sim/cmake/: vr_robot_simConfig-version.cmake  vr_robot_simConfig.cmake
src/vr_robot_sim/install/vr_robot_sim/share/vr_robot_sim/environment/: ament_prefix_path.dsv  path.dsv
src/vr_robot_sim/launch/: fence_bot.launch.py
src/vr_robot_sim/log/: latest_build
src/vr_robot_sim/src/: robot_controller.cpp  udp_publisher.cpp  vr_udp_publisher.cpp
(+50 files in other folders)
